@@ -1,6 +1,7 @@
 v0.0.5-alpha:
 - Made Game, and subsequent subclasses, serializable.
 - Added a method to Game for getting the elapsed and remaining time.
+- Changed PlayerUIAction to KeyboardKey to support all keys being send to the UI.
 
 v0.0.4-alpha:
 - Fixed null pointer exception in handling of tile change events.
